{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 22,
  "lineage": "c33823fe-8e4c-553b-67d9-5868f229d61a",
  "resources": [
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d5e8e63fa3d5f27b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-25-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.25.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d7fb0e000c582d10",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-2-110-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.110.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:internet-gateway/igw-065e049af3aab8064",
            "id": "igw-065e049af3aab8064",
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "gwInternet",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "gwInternet",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5e8e63fa3d5f27b",
            "id": "nat-061b63e9835aca110",
            "network_interface_id": "eni-03a971d721d9413b8",
            "private_ip": "10.0.0.25",
            "public_ip": "3.108.25.47",
            "subnet_id": "subnet-0c21b7ff3aa85c7c2",
            "tags": {
              "Environment": "dev",
              "Name": "gwNAT",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "gwNAT",
              "Project": "aws_proj1"
            }
          },
          "dependencies": [
            "module.new-vpc.aws_eip.nat",
            "module.new-vpc.aws_internet_gateway.default",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7fb0e000c582d10",
            "id": "nat-01a667e534e0f51a7",
            "network_interface_id": "eni-049438d1441b2d4ef",
            "private_ip": "10.0.2.50",
            "public_ip": "65.2.110.170",
            "subnet_id": "subnet-097d6ce672ea4ea23",
            "tags": {
              "Environment": "dev",
              "Name": "gwNAT",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "gwNAT",
              "Project": "aws_proj1"
            }
          },
          "dependencies": [
            "module.new-vpc.aws_eip.nat",
            "module.new-vpc.aws_internet_gateway.default",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0419b816c5726dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-061b63e9835aca110",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0419b816c5726dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.new-vpc.aws_eip.nat",
            "module.new-vpc.aws_internet_gateway.default",
            "module.new-vpc.aws_nat_gateway.default",
            "module.new-vpc.aws_route_table.private",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b4f3ecd5f91c03a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01a667e534e0f51a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b4f3ecd5f91c03a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.new-vpc.aws_eip.nat",
            "module.new-vpc.aws_internet_gateway.default",
            "module.new-vpc.aws_nat_gateway.default",
            "module.new-vpc.aws_route_table.private",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065e049af3aab8064",
            "id": "r-rtb-0afb598313fb38ba91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afb598313fb38ba9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.default",
            "module.new-vpc.aws_route_table.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:route-table/rtb-0d0419b816c5726dc",
            "id": "rtb-0d0419b816c5726dc",
            "owner_id": "099174830793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "PrivateRouteTable",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PrivateRouteTable",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:route-table/rtb-02b4f3ecd5f91c03a",
            "id": "rtb-02b4f3ecd5f91c03a",
            "owner_id": "099174830793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "PrivateRouteTable",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PrivateRouteTable",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:route-table/rtb-0afb598313fb38ba9",
            "id": "rtb-0afb598313fb38ba9",
            "owner_id": "099174830793",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "PublicRouteTable",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PublicRouteTable",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf1dc06d4404e36",
            "route_table_id": "rtb-0d0419b816c5726dc",
            "subnet_id": "subnet-02374ee2d160ace06"
          },
          "dependencies": [
            "module.new-vpc.aws_route_table.private",
            "module.new-vpc.aws_subnet.private",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048247d18a81d3cc9",
            "route_table_id": "rtb-02b4f3ecd5f91c03a",
            "subnet_id": "subnet-024ca9fec0a6e9e28"
          },
          "dependencies": [
            "module.new-vpc.aws_route_table.private",
            "module.new-vpc.aws_subnet.private",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3c4a947ae5c8f9c",
            "route_table_id": "rtb-0afb598313fb38ba9",
            "subnet_id": "subnet-0c21b7ff3aa85c7c2"
          },
          "dependencies": [
            "module.new-vpc.aws_route_table.public",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9db04cafb450dcb",
            "route_table_id": "rtb-0afb598313fb38ba9",
            "subnet_id": "subnet-097d6ce672ea4ea23"
          },
          "dependencies": [
            "module.new-vpc.aws_route_table.public",
            "module.new-vpc.aws_subnet.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:subnet/subnet-02374ee2d160ace06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02374ee2d160ace06",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "PrivateSubnet",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PrivateSubnet",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:subnet/subnet-024ca9fec0a6e9e28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-024ca9fec0a6e9e28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "PrivateSubnet",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PrivateSubnet",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:subnet/subnet-0c21b7ff3aa85c7c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c21b7ff3aa85c7c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "PublicSubnet",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PublicSubnet",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:subnet/subnet-097d6ce672ea4ea23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-097d6ce672ea4ea23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "PublicSubnet",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "PublicSubnet",
              "Project": "aws_proj1"
            },
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-custom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:vpc/vpc-05307020a2a258895",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f1c7095eee7962d",
            "default_route_table_id": "rtb-08f7567548ef0e8b3",
            "default_security_group_id": "sg-0bca6ad19491606d3",
            "dhcp_options_id": "dopt-da6585b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05307020a2a258895",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f7567548ef0e8b3",
            "owner_id": "099174830793",
            "tags": {
              "Environment": "dev",
              "Name": "new-custom-vpc",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "new-custom-vpc",
              "Project": "aws_proj1"
            }
          }
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:099174830793:vpc-endpoint/vpce-0ade2fd4b0b400c62",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "52.219.64.0/22"
            ],
            "id": "vpce-0ade2fd4b0b400c62",
            "owner_id": "099174830793",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02b4f3ecd5f91c03a",
              "rtb-0afb598313fb38ba9",
              "rtb-0d0419b816c5726dc"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "endpointS3",
              "Project": "aws_proj1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "endpointS3",
              "Project": "aws_proj1"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05307020a2a258895"
          },
          "dependencies": [
            "module.new-vpc.aws_route_table.private",
            "module.new-vpc.aws_route_table.public",
            "module.new-vpc.aws_vpc.new-custom-vpc"
          ]
        }
      ]
    }
  ]
}